url-loader/css-sprits/font

--- a/webpack4.1/package.json
+++ b/webpack4.1/package.json
@@ -23,8 +23,8 @@
     "postcss": "^6.0.20",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.2",
-    "postcss-sprite": "^2.2.1",
     "purify-css": "^1.2.5",
+    "postcss-sprites": "^4.2.1",
     "purifycss-webpack": "^0.7.0",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
