--- a/webpack4.3/package.json
+++ b/webpack4.3/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "html-loader": "^0.5.5",
+    "html-webpack-inline-chunk-plugin": "^1.1.1",
     "html-webpack-plugin": "^3.1.0",
     "img-loader": "^2.0.1",
     "url-loader": "^1.0.1",
