--- a/webpack5.1/package.json
+++ b/webpack5.1/package.json
@@ -29,7 +29,8 @@
     "purifycss-webpack": "^0.7.0",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
-    "webpack": "3.10.0"
+    "webpack": "3.10.0",
+    "webpack-dev-server": "^3.1.1"
   },
   "description": "通过添加list， 让babel/ autoprefixer都公用一个list",
   "browserslist": [
