--- a/webpack_example/package.json
+++ b/webpack_example/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "node scripts/dev_middleware_star.js",
-    "test": "webpack --config config/webpack.dev.config.js",
+    "webpack": "webpack --config config/webpack.dev.config.js",
     "devServer": "webpack-dev-server --config config/webpack.dev.config.js",
-    "devNode": "node scripts/dev_server_node.js"
+    "dev1": "node scripts/dev_middleware_star.js",
+    "dev2": "node scripts/dev_server_node.js",
+    "build": "webpack --config config/webpack.prod.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,9 +26,11 @@
     "express": "^4.16.4",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
