--- a/webpack4/config-record/package.json
+++ b/webpack4/config-record/package.json
@@ -38,7 +38,8 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.9.0",
+    "wepack-library-demo": "^1.0.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
