--- a/webpack4/config-record/package.json
+++ b/webpack4/config-record/package.json
@@ -7,6 +7,7 @@
     "*.css"
   ],
   "scripts": {
+    "dll": "webpack --config ./config/webpack.dll.config.js",
     "start": "webpack --config ./config/webpack.dev.config.js",
     "watch": "webpack --watch",
     "dev": "webpack-dev-server --config ./config/webpack.dev.config.js",
@@ -21,6 +22,7 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.7.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -39,7 +41,8 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.9.0",
-    "wepack-library-demo": "^1.0.1"
+    "wepack-library-demo": "^1.0.1",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
