--- a/webpack4/config-record/package.json
+++ b/webpack4/config-record/package.json
@@ -7,6 +7,7 @@
     "*.css"
   ],
   "scripts": {
+    "debug": "node --inspect --inspect-brk node_modules/webpack/bin/webpack.js",
     "dll": "webpack --config ./config/webpack.dll.config.js",
     "start": "webpack --config ./config/webpack.dev.config.js",
     "watch": "webpack --watch",
@@ -30,6 +31,7 @@
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
